# rabbit-quant

./: .env.example  .gitignore  GEMINI.md  README.md  main.py  prd.md  pyproject.toml
_bmad-output/brainstorming/: brainstorming-session-2026-02-21.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-27.md
_bmad-output/planning-artifacts/stories/: epic-01-data.md  epic-02-signals.md  epic-03-backtest.md  epic-04-dashboard.md  epic-05-paper-trading.md  optimize-continuous-fetch.md  story-asymmetric-trade-management.md  story-bot-b-mean-reversion.md  story-bot-b-oscillator-trigger.md  story-bot-c-d-volatility-reversion.md  story-bot-routing.md  story-cross-sectional-ranking.md  (+3 more)
config/: assets.toml  strategy.toml  timeframes.toml
docs/: development-roadmap.md  getting-started.md  project-overview-pdr.md
plans/260213-2151-epic1-story1-scaffold/: plan.md
plans/reports/: code-reviewer-260213-2202-epic1-story11-scaffold.md  tester-260213-2201-test-suite-results.md
src/: config.py  data_loader.py
src/backtest/: analyzer.py  bulk_runner.py  vbt_runner.py
src/dashboard/: app.py  charts.py
src/fetchers/: crypto_fetcher.py  orchestrator.py  stock_fetcher.py
src/services/: notifier.py  scheduler.py  trader.py
src/signals/: cycles.py  filters.py  fractals.py
tests/: conftest.py  test_analyzer.py  test_charts.py  test_config.py  test_crypto_fetcher.py  test_cycles.py  test_dashboard.py  test_data_loader.py  test_filters.py  test_fractals.py  test_orchestrator.py  test_stock_fetcher.py  test_vbt_runner.py
