[project]
name = "rabbit-quant"
version = "0.1.0"
description = "High-performance local quantitative trading workstation with cycle analysis and fractal geometry"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "numba>=0.59",
    "yfinance>=0.2",
    "ccxt>=4.0",
    "vectorbt>=0.26",
    "streamlit>=1.30",
    "plotly>=5.18",
    "apscheduler>=3.10",
    "aiohttp>=3.9",
    "tomli>=2.0; python_version < '3.11'",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "pre-commit>=3.6",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
